Fix comment list gets collapsed after running video and js error "undefined subscriber"

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -1046,7 +1046,7 @@ tr.commentMarked div.commentInfo div.commentMarkedTag {
 }
 table[id$="_comments"] {
 	width: 100%;
-    height: 412px;
+    height: 412px !important;
     overflow-y: scroll;
     display: inline-block;
     overflow-x: hidden;
